--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -9,7 +9,9 @@ html {
   -webkit-text-size-adjust: 100%;
       -ms-text-size-adjust: 100%;
 }
-
+body {
+  margin: 0;
+}
 article,
 aside,
 details,
@@ -1083,7 +1085,8 @@ body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
   line-height: 1.42857143;
-  background-color: #dedede;
+  color: #333;
+  background-color: #fff;
 }
 input,
 button,
@@ -1409,7 +1412,6 @@ a.bg-danger:focus {
   padding-bottom: 9px;
   margin: 40px 0 20px;
   border-bottom: 1px solid #eee;
-    background-color: #e74c3c;
 }
 ul,
 ol {
